--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,79 @@
+html {
+  height: 100%;
+}
+
 body {
-  background-color: skyblue;
+  margin: 0;
+  height: 100%;
+  background: linear-gradient(62deg, #001b76,#386bd1, #7ee39b, #386bd1, #001b76);
+  
+  color: #ffffff;
+  font-family: Arial;
+}
+
+p {
+  all: unset;
+}
+
+header {
+  margin: 10px;
+  padding: 10px;
+  
+  background-color: #ffffff44;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  
+  
+  border-radius: 5px;
+}
+
+header #name {
+  grid-column: 1 / 2;
+  
+  font-family: Helvetica;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+header #search-bar {
+  display: flex;
+  justify-content: center;
+  gap: 3px;
+}
+
+#search-bar input {
+  padding: 5px;
+  
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid white;
+}
+
+#search-bar input::placeholder {
+  color: #121418be;
+}
+
+#search-bar input:focus {
+  outline: none;
+  border-bottom: 2px solid #6c76e8;
+}
+
+#search-bar button {
+  background: transparent;
+  border: none;
+}
+
+#search-bar button img {
+  width: 1rem;
 }
 
 #forecast {
   padding: 5px;
   
-  display: flex;
+  display: none;
   justify-content: center;
   align-content: center;
 }
@@ -13,8 +81,9 @@ body {
 #forecast #details {
   padding: 5px;
   
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, auto-fit);
+  grid-template-rows: repeat(3, auto-fill);
   
   gap: 4px;
   
@@ -22,20 +91,153 @@ body {
 }
 
 #details > span {
-  padding: 5px;
+  padding: 10px;
   
   border-radius: 5px;
   background-color: #ffffff44;
   
 }
 
-#loading-screen {
-  position: fixed;
-  top: 45%;
-  left: 35%;
-  
-  display: flexbox;
+#details > span > span {
+  display: flex;
   flex-direction: column;
+}
+
+.conditions {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, auto-fit);
+  gap: 5px;
+}
+
+img {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  
+  width: 80%;
+  justify-self: center;
+}
+
+.conditions span {
+  grid-row: 2 / 3;
+}
+
+.temps {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, auto-fill);
+}
+
+.temps .current {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  
+  display: inline;
+  
+  font-size: 42pt;
+  font-weight: 800;
+}
+
+.temps span[class^="m"] {
+  grid-row: 2 / 3;
+}
+
+.address {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  
+  display: flex;
+  flex-direction: column;
+  
+  font-weight: 500;
+}
+
+.address .city {
+  font-size: 34pt;
+}
+
+.description {
+  grid-column: 1 / 2;
+  grid-row: 3;
+}
+
+.times {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, auto-fill);
+
+}
+
+.times .current {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  
+  font-size: 38pt;
+  font-weight: 800;
+  
   justify-content: center;
+}
+
+.label {
+  text-align: center;
+  font-size: 12pt;
+  font-weight: 900;
+}
+
+.value {
+  text-align: center;
+}
+
+.address .value {
+  text-align: start;
+}
+
+#welcome {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  
+  text-align: center;
   padding: 5px;
+  
+  font-family: Helvetica;
+  font-weight: 800;
+  font-size: 18pt;
+  color: white;
+}
+
+#loading-screen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  display: none;
+  text-align: center;
+  padding: 5px;
+  
+  font-family: Helvetica;
+  font-weight: 800;
+  font-size: 18pt;
+  color: white;
+}
+
+@media only screen and (min-width: 960px){
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  header #name {
+    font-size: 2rem;
+  }
 }
